# toxicityAnalysis

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  trainModel.py
templates/: index.html
